--- a/client/app/views/templates/accountSettings.jade
+++ b/client/app/views/templates/accountSettings.jade
@@ -1,22 +1,26 @@
-//-Bootstrap links and main style
+//- Bootstrap links
 script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
 script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
 link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
+//- Stylesheets links
 style
   include main.css
   include accountSettings.css
   
-div.container(onload="init()")
+div.container
+  //- Side left menu elements
   div.col-md-2.leftMenu
     div.sidebar-nav
       div.navbar.navbar-default(role='navigation')
         div.navbar-header
+          //- Mobile button
           button.navbar-toggle(type='button', data-toggle='collapse', data-target = '.sidebar-navbar-collapse')
             span.sr-only Toggle navigation
             span.icon-bar
             span.icon-bar
             span.icon-bar
           span.visible-xs.navbar-brand Menu
+        //- Menu elements
         div.navbar-collapse.collapse.sidebar-navbar-collapse
           ul.nav.navbar-nav
             li
@@ -27,37 +31,47 @@ div.container(onload="init()")
               a(href='#choices') Mes choix
             li.active
               a(href='#accountSettings') Paramètres
+  //-Main container
   div.col-md-10.settingsContainer
+    //- title
     div.row.text-center
       h1.col-md-12 Configurations des comptes
+    //- we need one row here for bath DYB and OpenBadges, but we could add more rows for other connection credentials inputs
     div.row
+      //- part for DoYouBuzz
       div.col-md-6
         h2 DoYouBuzz
         p Entrer votre clé API obtenu de DoYouBuzz (#[a(href='#') Aide]) :
         input#apiKey(type='text', name='DYBapiKey', placeholder='API Key')
         p Entrer votre clé API secrète obtenu de DoYouBuzz (#[a(href='#') Aide]) :
         input#apiSecret(type='text', name='DYBapiSecret', placeholder='API Secret')
-        button.btn.btn-warning#DYBconnection(type="button", style="display: none;", onclick="getDYBConnection()") (Re)Connecter mon compte DoYouBuzz.
+        //- button to connect or to reconnect the DoYouBuzz account to the portfolio
+        button.btn.btn-warning#DYBconnection(type="button", onclick="getDYBConnection()") (Re)Connecter mon compte DoYouBuzz.
+        //- loading spinner rolling animation
         div.spinner#DYBloadingIcon(style="display:none;")
+        //- This message will be displayed after a connection has been succeed
         div.btn.btn-success#DYBconnected(type="button", style="display: none;") Votre compte DoYouBuzz est maintenant enregistré.
+      //- part for OpenBadges, we need only the email here
       div.col-md-6
         h2 OpenBadges
         p Entrer l'adresse email associée à votre compte OpenBadges :
         input#openBadgesEmail(type='text', name='OBemail', placeholder='name@example.com')
 
       script(type="text/javascript").
+        //- here is the code to do the request, to get all elements from the database and set all input values
         var xmlHttp = new XMLHttpRequest();
         xmlHttp.open( "GET", "getAccountsInfos", false ); // false for synchronous request
         xmlHttp.send( null );
-        var data = JSON.parse(xmlHttp.responseText)[0];
-        document.getElementById("apiKey").value = data.doYouBuzzAPIKey;
-        document.getElementById("apiSecret").value = data.doYouBuzzAPISecret;
-        document.getElementById("openBadgesEmail").value = data.openBadgesEmail;
-        if(data.DYBResponse != "OK"){
-          document.getElementById("DYBconnection").setAttribute("style", "");
-        }else{
+        //- accountSettings object getten from database and will be in the global scope
+        var accountSettingsData = JSON.parse(xmlHttp.responseText)[0];
+        document.getElementById("apiKey").value = accountSettingsData.doYouBuzzAPIKey;
+        document.getElementById("apiSecret").value = accountSettingsData.doYouBuzzAPISecret;
+        document.getElementById("openBadgesEmail").value = accountSettingsData.openBadgesEmail;
+        //- if this is a response from a DoYouBuzz authentification we display the message to say that the account is connected
+        if(accountSettingsData.DYBResponse == "OK"){
           document.getElementById("DYBconnected").setAttribute("style", "");
         }
+    //- row for submiting button and UI messages
     div.row
       div.col-md-12.submitButton.text-center
         button.btn.btn-primary#submitChanges(onclick="submitAccountInfos()") Valider les changements
@@ -66,49 +80,82 @@ div.container(onload="init()")
         
         
 script(type="text/javascript").
+    //function to request the url elements from database and to authenticate the DoYouBuzz account
     function getDYBConnection(){
+      //loading animation
       document.getElementById("DYBloadingIcon").setAttribute("style", "");
       var DYBapiKey = document.getElementById("apiKey").value;
       var DYBapiSecret = document.getElementById("apiSecret").value;
       if(DYBapiKey == "" || DYBapiSecret == ""){
-            console.log("Missing arguments");
+            // both elements are required, so if one is missing we stop here and inform the user
+            var missingArgsMessage = document.getElementById("missingArguments");
+            missingArgsMessage.innerHTML = "Les deux informations (clé et clé secrète) doivent être fournis pour connecter votre compte DoYouBuzz. Merci de les remplir.";
+            missingArgsMessage.setAttribute("hidden", true);
             return;
       }
+      //the callback is the URL to get back after the user will confirm the authentication on DoYouBuzz platform
       var callback = window.location;
+      //the request (asynchronous here)
       var xmlHttp = new XMLHttpRequest();
+      //parameters for the request
       var parameters = "DYBapiKey=" + DYBapiKey + "&DYBapiSecret=" + DYBapiSecret + "&callback=" + callback;
       xmlHttp.open( "POST", "getDYBConnection", true ); // true for asynchronous request
       xmlHttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
       xmlHttp.onreadystatechange = function(){
+        //if we got the correct elements, we open the url to the authentication page (in a new tab/window)
         if (xmlHttp.readyState == 4 && xmlHttp.status == 200) {
                  var uri = "http://www.doyoubuzz.com/fr/oauth/authorize" + "?" + xmlHttp.responseText;
-                 window.open(uri, '_blank'); //open the link in a new window to avoid bugs
-            }
+                 window.open(uri, '_blank'); //open the link in a new window for a better user experience
+        }
+        else{
+          var missingArgsMessage = document.getElementById("missingArguments");
+          missingArgsMessage.innerHTML = JSON.parse(xmlHttp.responseText);
+          missingArgsMessage.setAttribute("hidden", true);
+        }
       }
       xmlHttp.send( parameters );
     }
 
+    //function to submit all information
     function submitAccountInfos(){
+        //we hide missing argumets message if it's displayed
         document.getElementById("missingArguments").setAttribute("hidden", true);
+        //we get all inputs value
         var DYBapiKey = document.getElementById("apiKey").value;
         var DYBapiSecret = document.getElementById("apiSecret").value;
         var OBemail = document.getElementById("openBadgesEmail").value;
-        var docId = data.id;
-        if(DYBapiKey == "" || DYBapiSecret == "" || OBemail == ""){
-            document.getElementById("missingArguments").removeAttribute("hidden");
+        
+        //if we already have accountSettings object, we use its id to update it with this submiting
+        var docId = accountSettingsData.id || "";
+        //we need at least one element to save it into the database
+        if(DYBapiKey == "" && DYBapiSecret == "" && OBemail == ""){
+            var missingArgsMessage = document.getElementById("missingArguments");
+            missingArgsMessage.innerHTML = "Aucun champs n'a été rempli. Veuillez en remplir pour enregistrer des informations.";
+            missingArgsMessage.setAttribute("hidden", true);
             return;
         }
+        //set parameters for the request
         var parameters = "DYBapiKey=" + DYBapiKey + "&DYBapiSecret=" + DYBapiSecret + "&OBemail=" + OBemail + "&id=" + docId; 
         var xhttpInfos = new XMLHttpRequest();
+        //asynchronous request
         xhttpInfos.open("PUT", "updateAccountsInfos", false);
         xhttpInfos.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
         xhttpInfos.send(parameters);
-        
-        //if we have an openBadge backpack email, we request all openbadges
-        if(OBemail){
+
+        /*//we should not need this part anymore
+        //if we have an openBadge backpack profil found, we request all openbadges
+        if(xhttpInfos.status == 200 && OBemail != ""){
           var xhttpBadges = new XMLHttpRequest();
           xhttpBadges.open("GET", "syncBadgesGroup", false);
           xhttpBadges.send();
+        }*/
+        
+        if(xhttpInfos.status != 200){
+          var missingArgsMessage = document.getElementById("missingArguments");
+          missingArgsMessage.innerHTML = "Echec de l'enregistrement des données.";
+          missingArgsMessage.setAttribute("hidden", true);
+          return;
         }
+
         document.getElementById("savedMessage").removeAttribute("hidden");
     }
