Minor comment changes

--- a/client/app/views/templates/accountSettings.jade
+++ b/client/app/views/templates/accountSettings.jade
@@ -8,7 +8,7 @@ style
   include accountSettings.css
   
 div.container
-  //- Side left menu elements
+  //- Left side menu elements
   div.col-md-2.leftMenu
     div.sidebar-nav
       div.navbar.navbar-default(role='navigation')
