--- a/client/app/views/templates/home.jade
+++ b/client/app/views/templates/home.jade
@@ -1,4 +1,4 @@
-//- Bootstrap links and main style
+//- Bootstrap links
 script( src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js' )
 script( src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js' )
 link(href="//maxcdn.bootstrapcdn.com/bootswatch/3.3.0/flatly/bootstrap.min.css", rel="stylesheet")
@@ -8,7 +8,7 @@ style
   include home.css
   
 div.container
-  //- Side left menu elements
+  //- Left side menu elements
   div.col-md-2.leftMenu
     div.sidebar-nav
       div.navbar.navbar-default(role='navigation')
