--- a/client/public.jade
+++ b/client/public.jade
@@ -25,26 +25,6 @@ html
               span de #{user.name} 
           span.col-md-12.text-center.secondTitle gracieusement hébergé par mon 
             a(href="https://cozy.io/fr/" target="_blank") Cozy Cloud
-        //-if user.age || user.email || user.status || user.localisation || user.description || user.hobbies || user.keywords
-          div.row.col-md-12#UserInfos
-            if user.age
-              p Age : #{user.age} ans
-            if user.email
-              p Email : #{user.email.replace("@", "(at)")}
-            if user.status
-              p Situation profesionnelle : #{user.status}
-            if user.localisation
-              p Lieu : #{user.localisation}
-            if user.description
-              p Description : #{user.description}
-            if user.hobbies
-              p Hobbies : 
-                for hobby in user.hobbies
-                  span.hobby= hobby
-            if user.keywords
-              p Mots-clés : 
-                for keyword in user.keywords
-                  span.keyword= keyword
       //- Documents part
       if portfolios || badges || user
         div.row.col-md-12#TabsContainer
@@ -55,6 +35,8 @@ html
                 div.documentBlock.col-md-12
                   div.documentContent.col-md-12
                     if user.age || user.email || user.status || user.localisation || user.description || user.hobbies || user.keywords
+                      if user.name
+                        p(style="font-weight:900") #{user.name}
                       if user.age
                         p Age : #{user.age} ans
                       if user.email
