--- a/client/app/views/templates/home.jade
+++ b/client/app/views/templates/home.jade
@@ -154,7 +154,7 @@ script(type="text/javascript").
       //we put the information into the correct input
       document.getElementById(propertyName).value = data[propertyName].value;
       //and set the visibility preference
-      document.getElementById(propertyName+"CB").checked = data[propertyName].display;
+      document.getElementById(propertyName+"CB").checked = data[propertyName].visibility;
     }
   }
 
